vlib/v/checker/tests/globals/global_anon_fn_without_body.out
vlib/v/checker/tests/globals/global_anon_fn_without_body.vv:1:14: error: anonymous function must declare a body
    1 | __global f = fn ()
      |              ~~~~~
